force-app/main/default/objects/PS_ReactivationRequest__c/PS_ReactivationRequest__c.object-meta.xml
<CustomObject>
    <description>Objeto para almacenar la carga de solicitudes para Reactivación</description>
    <label>Solicitud de Reactivación</label>
    <nameField>
        <displayFormat>RR-{00000000}</displayFormat>
        <label>Reactivación Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitudes de Reactivación</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>