force-app/main/default/objects/PS_ReactivationRequest__c/fields/PS_ErrorDescription__c.field-meta.xml
<CustomField>
    <fullName>PS_ErrorDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descripción del Error</label>
    <type>TextArea</type>
</CustomField>