force-app/main/default/objects/PS_ReactivationRequest__c/fields/PS_InsurancePolicy__c.field-meta.xml
<CustomField>
    <fullName>PS_InsurancePolicy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Solicitudes de Reactivación</relationshipLabel>
    <relationshipName>PS_InsurancesPolicy</relationshipName>
    <type>Lookup</type>
</CustomField>