force-app/main/default/objects/PS_ReactivationRequest__c/fields/PS_OperationNumber__c.field-meta.xml
<CustomField>
    <fullName>PS_OperationNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Número de Operación</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>