force-app/main/default/objects/PS_ReactivationRequest__c/fields/PS_ProcessedFlag__c.field-meta.xml
<CustomField>
    <fullName>PS_ProcessedFlag__c</fullName>
    <label>Procesado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unprocessed</fullName>
                <default>true</default>
                <label>Unprocessed</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>