force-app/main/default/objects/PS_ReactivationRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PS_OperationNumber__c</columns>
    <columns>PS_InsurancePolicy__c</columns>
    <columns>PS_ProcessedFlag__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>